--- a/src/voicecall-manager.service
+++ b/src/voicecall-manager.service
@@ -1,12 +1,11 @@
 [Unit]
 Description=Voicecall manager
-Requires=dbus.socket booster-qt5.service
-Wants=ngfd.service tone-generator.service
-After=dbus.socket pre-user-session.target booster-qt5.service
+Requires=dbus-session.service
+After=dbus-session.service
 
 [Service]
-ExecStart=/usr/bin/invoker -o --type=qt5 /usr/bin/voicecall-manager
+ExecStart=/usr/bin/voicecall-manager
 Restart=always
 
 [Install]
-WantedBy=user-session.target
+WantedBy=multi-user.target
